--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
             margin: 0;
             padding: 0;
             width: 100%;
-            height: 100%;
-            overflow: hidden;
+            min-height: 100%; /* Use min-height to allow content to expand */
             font-family: 'Inter', sans-serif;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
@@ -66,6 +65,15 @@
             overflow-y: auto;
             -webkit-overflow-scrolling: touch;
         }
+        /* Main container for centering content */
+        .main-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            padding: 1rem;
+        }
     </style>
     <!-- Load Alpine.js for interactivity -->
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
@@ -88,7 +96,7 @@
         </div>
     </div>
     
-    <div class="h-full w-full flex flex-col items-center justify-center p-4">
+    <div class="main-container">
         <div class="w-full max-w-6xl text-center">
             <!-- Main Header -->
             <div class="mb-12">
@@ -106,7 +114,7 @@
             </nav>
 
             <!-- Content Area -->
-            <div class="relative h-96 mt-8 flex items-center justify-center">
+            <div class="relative h-auto md:h-96 mt-8 w-full flex items-center justify-center">
                 <!-- Pane 1: About Us (Accordion) -->
                 <div class="content-pane" :class="{ 'active': activePane === 'about' }">
                     <div class="max-w-3xl w-full mx-auto" x-data="{ open: true }">
