--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         }
         /* Class to enable touch scrolling on iOS for the iframe */
         .ios-scroll-container {
+            position: relative; /* Helps iOS establish a scrolling context */
             overflow-y: auto;
             -webkit-overflow-scrolling: touch;
         }
@@ -139,15 +140,15 @@
                     <div class="w-full flex flex-wrap items-center justify-center gap-8">
                         <!-- Portfolio Item 1 -->
                         <div class="w-64 h-96 bg-slate-200 rounded-xl p-1.5 ios-scroll-container shadow-2xl">
-                            <iframe class="rounded-lg w-full h-full" src="https://hellocharchee.github.io/farmersdaughterhotelguide/" title="The Farmer's Daughter Hotel" sandbox="allow-scripts allow-same-origin"></iframe>
+                            <iframe scrolling="auto" class="rounded-lg w-full h-full" src="https://hellocharchee.github.io/farmersdaughterhotelguide/" title="The Farmer's Daughter Hotel" sandbox="allow-scripts allow-same-origin"></iframe>
                         </div>
                         <!-- Portfolio Item 2 -->
                         <div class="w-64 h-96 bg-slate-200 rounded-xl p-1.5 ios-scroll-container shadow-2xl">
-                            <iframe class="rounded-lg w-full h-full" src="https://hellocharchee.github.io/thesaguarohidewayguide/" title="The Saguaro Hideaway" sandbox="allow-scripts allow-same-origin"></iframe>
+                            <iframe scrolling="auto" class="rounded-lg w-full h-full" src="https://hellocharchee.github.io/thesaguarohidewayguide/" title="The Saguaro Hideaway" sandbox="allow-scripts allow-same-origin"></iframe>
                         </div>
                         <!-- Portfolio Item 3 -->
                         <div class="w-64 h-96 bg-slate-200 rounded-xl p-1.5 ios-scroll-container shadow-2xl">
-                            <iframe class="rounded-lg w-full h-full" src="https://hellocharchee.github.io/orionandlryawedding/" title="Orion & Lyra's Wedding" sandbox="allow-scripts allow-same-origin"></iframe>
+                            <iframe scrolling="auto" class="rounded-lg w-full h-full" src="https://hellocharchee.github.io/orionandlryawedding/" title="Orion & Lyra's Wedding" sandbox="allow-scripts allow-same-origin"></iframe>
                         </div>
                     </div>
                 </div>
